test/pass/closures/close_over_option.lily
define f {
    var v = Some(1)
    define g {
        match v: {
            case Some(s):
            case None:
        }
    }
}
