test/fail/match/match_incomplete.lily
#[
SyntaxError: Match pattern not exhaustive. The following case(s) are missing:
* None
    from match_incomplete.lily:12:
]#

var v = None

match v: {
    case Some(s):
        print("Impossible!\n")
}
